1. 从主干合并来 pom.xml，并设置源码和目标版本为 JDK 1.6 2. 使用 mina 包里的 Base64 类代替 sun 所私有的类 sun.misc.BASE64Decoder，否则在非 sun 的 JDK，如 openjdk 等上就无法运行